--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -225,15 +225,15 @@
 
 .post-meta {
   font-size: $small-font-size;
-  color: #747474;
+  color: #737373;
 }
 
 .post-meta .dt-published {
-  color: #747474;
+  color: #737373;
 }
 
 .post-meta .p-author {
-  color: #747474;
+  color: #737373;
 }
 
 .footer-col .p-name {
@@ -247,7 +247,7 @@
 .post-link {
   display: block;
   @include relative-font-size(1.5);
-  color: #747474;
+  color: #737373;
 }
 
 
